<resources>
    <string name="app_name">Let’s Gro</string>
    <string name="app_name_tag">LetsGroTag</string>
    <string name="app_name_file">Lets Gro</string>
    <string name="tryAgain">Try Again</string>
    <string name="error_in_file_selection">Something went wrong with file selection, please select file from another location</string>
    <string name="dummyText">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. </string>
    <string name="rs">\u20B9</string>
    <string name="some_thing_went_wrong">Oops! Seems like something went wrong, please try again after sometime.</string>
    <string name="please_make_sure_you_are_connected_to_internet">Please make sure you are connected to internet</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="alert">Alert</string>
    <string name="strOk">OK</string>
    <string name="strCancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="str_loading">Loading…</string>
    <string name="password">Password</string>
    <string name="strContinue">Continue</string>
    <string name="signup">Signup</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="log_in">Login</string>
    <string name="log_in_with_classroom">Log in with Classroom+</string>
    <string name="username_require">Username/Email is required</string>
    <string name="invalid_username">Enter a valid Username/Email</string>
    <string name="password_require">Password is required</string>
    <string name="create_account_confirmation">Are you sure want to create account?</string>
    <string name="account_linked_successfully">Your classroom account is linked with the Let\'s gro Successfully.</string>
    <string name="account_created_successfully">Your Let\'s Gro account is created Successfully.</string>
    <string name="invalid_classroom_user">Classroom user details are invalid.</string>
    <string name="classroom_lets_gro_unmatched">Your Let\'s gro user account is Associated with different Classroom account.</string>
    <string name="getting_user_details">Getting user details, please wait.</string>
    <string name="allow_access_phone_storage">Allow to access the phone storage</string>
    <string name="pdf">PDF</string>
    <string name="please_select_resume">Please select resume</string>
    <string name="resume">Resume</string>
    <string name="upload_resume">Upload Resume</string>
    <string name="linkedin_profile">Linkedin Profile</string>
    <string name="message">Message</string>
    <string name="resume_note">Supported file formats PDF, PPT, DOC Maximum file size 2 MB</string>
    <string name="resume_error">More than 2 MB file not allowed.</string>
    <string name="file_type_error">File type not allowed.</string>
    <string name="registration_confirmation">Do you confirm that information is correct?</string>
    <string name="remove_resume_alert">Do you want to remove resume file?</string>
    <string name="emailId">Email Id</string>
    <string name="enter_emailId">Please enter valid e-mail ID</string>
    <string name="questions">Questions</string>
    <string name="questions_and_answer">Questions And Answer</string>
    <string name="save">save</string>
    <string name="next">Next</string>
    <string name="search_by_course_or_keywords">Search by Course name or keywords</string>
    <string name="search_by_student">Search by student name</string>
    <string name="previous">Previous</string>
    <string name="submit_test">Submit Test</string>
    <string name="giveYourFeedback">Give your feedback</string>
    <string name="course_name">Course Name</string>
    <string name="chapter_name">Chapter Name</string>
    <string name="section_name">Section Name</string>
    <string name="no_courses">You will see course list once\ncourses are added in system</string>
    <string name="no_more_courses">No more courses</string>
    <string name="no_internet_message">No Internet Connection</string>
    <string name="no_test_found_message">No Test Found</string>
    <string name="marks">Mark(s)</string>
    <string name="try_again">Try Again?</string>
    <string name="all_the_best">All the best !</string>
    <string name="first_name">First Name</string>
    <string name="middle_name">Middle Name</string>
    <string name="last_name">Last Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="designation">Designation</string>
    <string name="pass">pass</string>
    <string name="fail">fail</string>
    <string name="pass_message">Congratulations you passed!</string>
    <string name="fail_message">Sorry, you failed!</string>
    <string name="loader_result_message">Please stick with us, while we are calculating your result…!</string>
    <string name="alpha_digit_format">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz</string>
    <string name="view_certificate">View Certificate</string>
    <string name="share_certificate">Share Certificate</string>
    <string name="lock">Lock</string>
    <string name="download_title">My Downloads</string>
    <string name="correct">Correct</string>
    <string name="incorrect">Incorrect</string>
    <string name="delete_local_video_alert">Do you really want delete the video…?</string>
    <string name="file_stored_message">File has been stored at, %1$s.</string>
    <string name="offline_download_no_data_message">You have not yet downloaded any videos</string>
    <string name="storage_permission_desc">Due to change in permission strategy of Android 6.0 and above, %1$s needs your permission to access your Storage?</string>
    <string name="share_course"> could be useful for you – Let’s Gro www.letsgro.in</string>
    <string name="dynamic_required">%1$s required</string>
    <string name="required">Required</string>
    <string name="invalid_email_id">Invalid Email Id</string>
    <string name="courses">Courses</string>
    <string name="profile">Profile</string>
    <string name="test">Test</string>
    <string name="quiz_instruction">Quiz Instruction</string>
    <string name="all_the_best_fragment">All The Best</string>
    <string name="show_question">Show Question</string>
    <string name="course_detail">Course Detail</string>
    <string name="quiz_review">Quiz Review</string>
    <string name="path_authority">com.ramanbyte.emla</string>
    <string name="jump_to_question">jump to question</string>
    <string name="not_attempted">Not Attempted</string>
    <string name="attempted">Attempted</string>
    <string name="submit_test_message">Are you sure, you want to submit the test?</string>
    <string name="leave_test_message">Are you sure, you want to leave the test?</string>
    <string name="test_completed">Your test has been completed successfully.</string>
    <string name="title_activity_pre_assessment_test">PreAssessmentTestActivity</string>
    <string name="log_out_description">This is the logout button</string>
    <string name="forget_password">Forgot Password</string>
    <string name="how_to_use">How to use ?</string>
    <string name="what_i_ll_learn">What I\'ll Learn ?</string>
    <string name="assessment_instruction">Assessment Instruction</string>
    <string name="course_syllabus">Course Syllabus</string>
    <string name="course_information">Course Information</string>
    <string name="length">Length</string>
    <string name="efforts">Efforts</string>
    <string name="credits">Credits</string>
    <string name="specialization">Specialization</string>
    <string name="level">Level</string>
    <string name="language">Language</string>
    <string name="allocated_faculty">Allocated Faculty</string>
    <string name="powered_by">Powered By</string>
    <string name="basics_of_sales">Basics of sales</string>
    <string name="logout">Logout</string>
    <string name="attempts_Allowed">Attempts Allowed</string>
    <string name="grading_method">Grading Method</string>
    <string name="no_more_attempts">No more attempts are allowed</string>
    <string name="confirmation_method">I hereby affirm that I will not be involved in any unauthorized and/or illegal activities in the course I will be undertaking.I will maintain the utmost honesty and integrity while taking assessments associated with the learning content.</string>
    <string name="please_agree_the_instruction">Please affirm to the pledge in order to proceed!</string>
    <string name="not_attempted_any_question">Ooh! It seems like you have not attempted any of question in the test.</string>
    <string name="not_valid_user">You are not allow to login with this credentials</string>
    <string name="logout_user_alert">Please check your internet connection to logout…!</string>
    <string name="pay_video_alert">Please check your internet connection to play video…!</string>
    <string name="no_chapter">No Chapter</string>
    <string name="no_more_chapter">No more Chapter</string>
    <string name="welcome_to_e_learning">Welcome to E-Learning</string>
    <string name="take_pledge">Take pledge</string>
    <string name="welcome">Welcome</string>
    <string name="instruction">Instruction</string>
    <string name="total_number_of_questions">Total Number of Questions</string>
    <string name="no_section">No Section</string>
    <string name="no_more_section">No more Section</string>
    <string name="feature_under_development">Feature Under Development</string>
    <string name="appear_formative">Take Formative Test</string>
    <string name="appear_summative">Take Summative Test</string>
    <string name="course_details">Course Details</string>
    <string name="pre_assessment">Pre Assessment</string>
    <string name="app_update_title">New Version Available</string>
    <string name="app_update_message">There\'s a newer version available for download!. Do you want to update now?</string>
    <string name="str_update">Update</string>
    <string name="str_notNow">Not Now</string>
    <string name="kindly_download_the_content_first">Kindly download the content before proceeding.</string>
    <string name="notifications_admin_channel_name">Global channel</string>
    <string name="notifications_admin_channel_description">Notifications sent from the app admin</string>
    <string name="app_admin_channel">eMLA_cap_app_admin_channel</string>
    <string name="str_content">Content</string>
    <string name="downloading_content">Please Wait! Downloading Content</string>
    <string name="getting_content_details">Getting Content Details</string>
    <string name="download_started">Download Started</string>
    <string name="failed_to_download_content">Downloading failed…</string>
    <string name="downloading">Downloading…</string>
    <string name="downloads">Downloads</string>
    <string name="my_favourite">My Favourite</string>
    <string name="my_cart">My Cart</string>
    <string name="my_course">My Courses</string>
    <string name="transaction_history">Transaction History</string>
    <string name="settings">Settings</string>
    <string name="no_data">No Data</string>
    <string name="program">Program</string>
    <string name="batchYear">Batch Year</string>
    <string name="pattern">Pattern</string>
    <string name="university">University</string>
    <string name="institute">Institute</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="alternate_mobile_number">Alternate Mobile Number</string>
    <string name="time_to_contact">Good Time to Contact</string>
    <string name="send">Send</string>
    <string name="cancel">Cancel</string>
    <string name="what_you_want_to_learn_in_live_session">What you want to learn in Live Session?</string>
</resources>