<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/quiz_nav_graph"
    app:startDestination="@id/quizInstructionFragment">
    <fragment
        android:id="@+id/quizInstructionFragment"
        android:name="com.ramanbyte.emla.ui.fragments.QuizInstructionFragment"
        android:label="@string/quiz_instruction">
        <action
            android:id="@+id/action_allTheBestFragment"
            app:destination="@id/allTheBestFragment" />
    </fragment>
    <fragment
        android:id="@+id/allTheBestFragment"
        android:name="com.ramanbyte.emla.ui.fragments.AllTheBestFragment"
        android:label="@string/all_the_best_fragment">
        <action
            android:id="@+id/action_showQuestionFragment"
            app:destination="@id/showQuestionFragment" />
    </fragment>
    <fragment
        android:id="@+id/showQuestionFragment"
        android:name="com.ramanbyte.emla.ui.fragments.ShowQuestionFragment"
        android:label="@string/show_question" />
</navigation>