<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorApplicationBackground"
        android:padding="@dimen/dp_25">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgUpdate"
            android:layout_width="@dimen/dp_120"
            android:layout_height="@dimen/dp_120"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/ic_element_news" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtUpdateTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_update_title"
            style="@style/TextViewMediumNavyBlueOnLightNWhiteOnDark"
            android:textSize="@dimen/sp_18"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgUpdate"
            app:layout_constraintVertical_bias="0.1000003" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtUpdateMessage"
            style="@style/TextViewRegularNavyBlueOnLightNWhiteOnDark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:gravity="center"
            android:paddingLeft="@dimen/dp_3"
            android:paddingRight="@dimen/dp_3"
            android:text="@string/app_update_message"
            android:textSize="@dimen/sp_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtUpdateTitle" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnNo"
            style="@style/CustomCapsuleButtonFilled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_22"
            android:text="@string/str_notNow"
            android:textSize="@dimen/sp_14"
            android:paddingStart="@dimen/dp_30"
            android:paddingTop="@dimen/dp_10"
            android:paddingEnd="@dimen/dp_30"
            android:paddingBottom="@dimen/dp_10"
            app:layout_constraintEnd_toStartOf="@+id/btnYes"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtUpdateMessage" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnYes"
            style="@style/CustomCapsuleButtonFilled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_8"
            android:text="@string/str_update"
            android:textSize="@dimen/sp_14"
            android:paddingStart="@dimen/dp_30"
            android:paddingTop="@dimen/dp_10"
            android:paddingEnd="@dimen/dp_30"
            android:paddingBottom="@dimen/dp_10"
            android:textAllCaps="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnNo"
            app:layout_constraintTop_toTopOf="@+id/btnNo" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>